--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
 
     "files.autoSaveDelay": 10000,
 
-    "editor.wrappingColumn": 125,
+    "editor.wordWrap": "bounded",
 
     "editor.cursorBlinking": "expand",
 
