--- a/angular2Convert/hello-world/src/tsconfig.spec.json
+++ b/angular2Convert/hello-world/src/tsconfig.spec.json
@@ -1,13 +1,6 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "es2016"
-    ],
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "target": "es5",
