--- a/nodeDev/recipe-finder/package.json
+++ b/nodeDev/recipe-finder/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.4.0",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "mongodb": "^2.2.31",
     "nodemailer": "^4.0.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
