--- a/photoStorage/package.json
+++ b/photoStorage/package.json
@@ -8,10 +8,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "0.0.40",
     "@angular/animations": "^5.0.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
@@ -25,7 +27,9 @@
     "mongodb": "^3.0.0-rc0",
     "multer": "^1.3.0",
     "nodemailer": "^4.4.1",
+    "promise": "^8.0.1",
     "rxjs": "^5.5.2",
+    "sharp": "^0.18.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -44,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nodemon": "^1.13.3",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
