--- a/photoStorage/package.json
+++ b/photoStorage/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.0.0-rc0",
     "multer": "^1.3.0",
     "nodemailer": "^4.4.1",
+    "npm": "^5.7.1",
     "promise": "^8.0.1",
     "rxjs": "^5.5.2",
     "sharp": "^0.18.4",
