--- a/photoStorage/package.json
+++ b/photoStorage/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "masonry-layout": "^4.2.1",
     "mongodb": "^3.0.0-rc0",
     "multer": "^1.3.0",
     "nodemailer": "^4.4.1",
