--- a/photoStorage/package.json
+++ b/photoStorage/package.json
@@ -24,18 +24,19 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "core-js": "^2.4.1",
+    "jsonwebtoken": "^8.2.1",
     "masonry-layout": "^4.2.1",
     "mongodb": "^3.0.0-rc0",
     "multer": "^1.3.0",
     "nodemailer": "^4.4.1",
-    "npm": "^5.7.1",
+    "npm": "^5.8.0",
     "promise": "^8.0.1",
     "rxjs": "^5.5.2",
     "sharp": "^0.18.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.0",
+    "@angular/cli": "^1.7.3",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
