--- a/photoStorage/package.json
+++ b/photoStorage/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "bootstrap4": "0.0.1-security",
     "core-js": "^2.4.1",
     "jsonwebtoken": "^8.2.1",
     "masonry-layout": "^4.2.1",
