--- a/photoStorage/package.json
+++ b/photoStorage/package.json
@@ -13,48 +13,50 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/schematics": "0.0.40",
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular-devkit/schematics": "0.7.4",
+    "@angular/animations": "^6.1.3",
+    "@angular/common": "^6.1.3",
+    "@angular/compiler": "^6.1.3",
+    "@angular/core": "^6.1.3",
+    "@angular/forms": "^6.1.3",
+    "@angular/http": "^6.1.3",
+    "@angular/platform-browser": "^6.1.3",
+    "@angular/platform-browser-dynamic": "^6.1.3",
+    "@angular/router": "^6.1.3",
     "bootstrap4": "0.0.1-security",
-    "core-js": "^2.5.6",
-    "jsonwebtoken": "^8.2.1",
-    "mongodb": "^3.0.8",
-    "multer": "^1.3.0",
-    "nodemailer": "^4.6.4",
-    "npm": "^5.8.0",
+    "core-js": "^2.5.7",
+    "jsonwebtoken": "^8.3.0",
+    "mongodb": "^3.1.3",
+    "multer": "^1.3.1",
+    "nodemailer": "^4.6.8",
+    "npm": "^6.4.0",
     "promise": "^8.0.1",
-    "rxjs": "^5.5.10",
-    "sharp": "^0.18.4",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
+    "sharp": "^0.20.5",
+    "typescript": "^2.7.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
-    "@types/jasmine": "~2.5.53",
+    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular/cli": "^6.1.4",
+    "@angular/compiler-cli": "^6.1.3",
+    "@angular/language-service": "^6.1.3",
+    "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.109",
-    "codelyzer": "^4.3.0",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "@types/node": "^10.7.1",
+    "codelyzer": "^4.4.4",
+    "jasmine-core": "~3.2.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.17.4",
-    "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "karma-jasmine-html-reporter": "^1.3.0",
+    "nodemon": "^1.18.3",
+    "protractor": "^5.4.0",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0"
   }
 }
